@@ -6,6 +6,7 @@ description = Scaling Health
 mc_version=1.12.2
 sl_version=1.12-SNAPSHOT
 jei_version=4.11.0.202
+gamestages_version=2.0.91
 
 fg_version = ForgeGradle:2.3-SNAPSHOT
 forge_mc_version = 1.12.2
